--- a/src/config.yml
+++ b/src/config.yml
@@ -2,7 +2,7 @@
 # control
 control:
   num_supervised: '4000'
-  loss_mode: 'fix@0.95-mix'
+  loss_mode: 'kdfix@0.95-mix'
   num_clients: '100'
   active_rate: '0.1'
   data_split_mode: 'iid'
